unpackaged/main/default/objects/Training_Subscription_Term__c/Training_Subscription_Term__c.object-meta.xml
<CustomObject>
    <description>Institute Training Subscriptions terms and authorized accounts</description>
    <label>Training Subscription Term</label>
    <nameField>
        <label>Training Subscription Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Subscription Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>