unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Annuals_Training_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>