unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions__c</fullName>
    <label>Active Subscriptions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>