unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Alternate_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Names__c</fullName>
    <inlineHelpText>Alternate names the account may be know as or referred to</inlineHelpText>
    <label>Alternate Names</label>
    <type>TextArea</type>
</CustomField>