unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Attended_Classes__c.field-meta.xml
<CustomField>
    <fullName>Attended_Classes__c</fullName>
    <label>Attended Classes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>