unpackaged/main/default/objects/Training_Subscription_Term__c/fields/BAC__c.field-meta.xml
<CustomField>
    <fullName>BAC__c</fullName>
    <label>BAC #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>