unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_2__c</fullName>
    <label>Contact Email 2</label>
    <type>Email</type>
</CustomField>