unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Email to be used for all Training Subscription Term correspondence.</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>