unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Contact_Phone_Direct__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Direct__c</fullName>
    <label>Contact Phone (Direct)</label>
    <type>Phone</type>
</CustomField>