unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Contact_Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Mobile__c</fullName>
    <label>Contact Phone (Mobile)</label>
    <type>Phone</type>
</CustomField>