unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract # (Deprecated)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>