unpackaged/main/default/objects/Training_Subscription_Term__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>if(
    Term__c=&quot;Termed&quot;,
    Termination_Date__c , 
    if(
        Term__c = &quot;1 Month&quot;, 
        DATE(
            YEAR(
                ADDMONTHS(TODAY(), 1)
            ),
            MONTH(
                ADDMONTHS(TODAY(), 1)
            ),
            DAY(
                End_Date_Code__c
            )
        ),
        End_Date_Code__c 
    )
)</formula>
    <label>Current Term Ends</label>
    <type>Date</type>
</CustomField>