unpackaged/main/default/objects/Training_Subscription_Term__c/fields/End_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Code__c</fullName>
    <description>This is the original 1 year End date derived from Start Date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>