unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notes__c</fullName>
    <label>Exception Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>