unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Free_Cancellation_Reset__c.field-meta.xml
<CustomField>
    <fullName>Free_Cancellation_Reset__c</fullName>
    <inlineHelpText>Date that the Cancellation Freebie will be reset if used.</inlineHelpText>
    <label>Free Cancellation Reset</label>
    <type>Date</type>
</CustomField>