unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Free_Cancellation_Used__c.field-meta.xml
<CustomField>
    <fullName>Free_Cancellation_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Cancellation Used</label>
    <type>Checkbox</type>
</CustomField>