unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Ignore_Annual_to_Monthly_Transition__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Annual_to_Monthly_Transition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Annual to Monthly Transition</label>
    <type>Checkbox</type>
</CustomField>