unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Is_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Is_Suspended__c</fullName>
    <formula>If( 

   Suspension_Start__c &gt;= Today(), 


     If(Suspension_End__c &lt;= Today(),TRUE,FALSE),FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Suspended</label>
    <type>Checkbox</type>
</CustomField>