unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Last_Year__c</fullName>
    <formula>TEXT(YEAR(ADDMONTHS(TODAY(), -12)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year</label>
    <type>Text</type>
</CustomField>