unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BDC</fullName>
            </value>
            <value>
                <fullName>Marketing - Convention</fullName>
            </value>
            <value>
                <fullName>Marketing - Email Campaign</fullName>
            </value>
            <value>
                <fullName>Marketing - Print Campaign</fullName>
            </value>
            <value>
                <fullName>Marketing - Web Site</fullName>
            </value>
            <value>
                <fullName>Moderator/Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>