unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Months_on_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Months_on_Subscription__c</fullName>
    <formula>IF(  isblank(Termination_Date__c), (TODAY() -  Start_Date__c)/30,  (Termination_Date__c - Start_Date__c)/30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months on Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>