unpackaged/main/default/objects/Training_Subscription_Term__c/fields/NeedsToTransition__c.field-meta.xml
<CustomField>
    <fullName>NeedsToTransition__c</fullName>
    <description>Used only to filter records out of the transitioning flow.</description>
    <formula>AND(
   End_Date__c &lt;= TODAY(),
   NOT(Transitioned_to_Monthly__c),
   ISNULL(Termination_Date__c),
   RecordType.Name &lt;&gt; &#39;Monthly&#39;,
   RecordType.Name &lt;&gt; &#39;20 Group - Monthly&#39;,
   RecordType.Name &lt;&gt; &#39;Online University&#39;,
   RecordType.Name &lt;&gt; &#39;PASE Program&#39;
)</formula>
    <label>NeedsToTransition</label>
    <type>Checkbox</type>
</CustomField>