unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Subscription Terms</relationshipLabel>
    <relationshipName>Training_Subscription_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>