unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Training Subscription Terms</relationshipLabel>
    <relationshipName>Training_Subscription_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>