unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <type>TextArea</type>
</CustomField>