unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>IF (
    AND(
        NOT( ISBLANK( Suspension_End__c ) ),
        Suspension_Start__c &lt;= TODAY(),
        Suspension_End__c &gt; TODAY()
    ),
    &quot;Suspended&quot;,
    IF(
        Start_Date__c &gt; TODAY(),
        &quot;Not Started&quot;,
        IF(
            AND(
                NOT( ISBLANK( Termination_Date__c ) ),
                Termination_Date__c &lt; TODAY()
            ),
            &quot;Inactive&quot;,
            IF(
                AND(
                    NOT( ISBLANK( End_Date_Code__c ) ),
                    End_Date_Code__c &lt; TODAY()
                ),
                &quot;Inactive&quot;,
                &quot;Active&quot;
            )
        )
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>