unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Subscription_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Accounts__c</fullName>
    <label>Subscription Accounts</label>
    <summaryForeignKey>Training_Subscription_Account__c.Training_Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>