unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <displayFormat>Sub-{000000}</displayFormat>
    <label>Subscription Term</label>
    <type>AutoNumber</type>
</CustomField>