unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Suspension_End__c.field-meta.xml
<CustomField>
    <fullName>Suspension_End__c</fullName>
    <label>Suspension End</label>
    <type>Date</type>
</CustomField>