unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Suspension_Start__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Start__c</fullName>
    <label>Suspension Start</label>
    <type>Date</type>
</CustomField>