unpackaged/main/default/objects/Training_Subscription_Term__c/fields/System_Update_Message__c.field-meta.xml
<CustomField>
    <fullName>System_Update_Message__c</fullName>
    <label>System Update Message</label>
    <type>TextArea</type>
</CustomField>