unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(
    Status_Formula__c = &quot;Inactive&quot;,
    &quot;Termed&quot;,
    RecordType.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>