unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Term_No__c.field-meta.xml
<CustomField>
    <fullName>Term_No__c</fullName>
    <displayFormat>TST-{000000}</displayFormat>
    <label>Term #</label>
    <type>AutoNumber</type>
</CustomField>