unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Term_Number_Only__c.field-meta.xml
<CustomField>
    <fullName>Term_Number_Only__c</fullName>
    <formula>RIGHT( Term_No__c, LEN( Term_No__c ) - ( FIND(&quot;-&quot;,  Term_No__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term # (Number Only)</label>
    <type>Text</type>
</CustomField>