unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date set for subscription termination</description>
    <inlineHelpText>Date set for subscription termination</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>