unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Termination_Detail__c.field-meta.xml
<CustomField>
    <fullName>Termination_Detail__c</fullName>
    <label>Termination Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Termination_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Details</valueSetName>
    </valueSet>
</CustomField>