unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Reasons</valueSetName>
    </valueSet>
</CustomField>