unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Termination_Request__c.field-meta.xml
<CustomField>
    <fullName>Termination_Request__c</fullName>
    <description>Date the customer requested the termination of subscription</description>
    <inlineHelpText>Date the customer requested the termination of subscription</inlineHelpText>
    <label>Termination Request</label>
    <type>Date</type>
</CustomField>