unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Training_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription__c</fullName>
    <label>Training Subscription</label>
    <referenceTo>Training_Subscription__c</referenceTo>
    <relationshipLabel>Training Subscription Terms</relationshipLabel>
    <relationshipName>Training_Subscription_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>