unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Training_Subscription_Term_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Term_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Subscription Term ID (18)</label>
    <type>Text</type>
</CustomField>