unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Training_Subscription_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Term_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Subscription Term (ID)</label>
    <type>Text</type>
</CustomField>