unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Transitioned_to_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Transitioned_to_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transitioned to Monthly?</label>
    <type>Checkbox</type>
</CustomField>