unpackaged/main/default/objects/Training_Subscription_Term__c/fields/Upcoming_Classes__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Classes__c</fullName>
    <label>Upcoming Classes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>