unpackaged/main/default/objects/Training_Subscription_Term__c/fields/X20_Group_Account_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Account_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group Account Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Training Subscription Terms</relationshipLabel>
    <relationshipName>Training_Subscription_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>