unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/Annual.recordType-meta.xml
<RecordType>
    <fullName>Annual</fullName>
    <active>true</active>
    <label>Annual</label>
</RecordType>