unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/Annual_Extension.recordType-meta.xml
<RecordType>
    <fullName>Annual_Extension</fullName>
    <active>true</active>
    <label>Annual Extension</label>
</RecordType>