unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/Monthly.recordType-meta.xml
<RecordType>
    <fullName>Monthly</fullName>
    <active>true</active>
    <label>Monthly</label>
</RecordType>