unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/Online_University.recordType-meta.xml
<RecordType>
    <fullName>Online_University</fullName>
    <active>true</active>
    <label>Online University</label>
</RecordType>