unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/PASE_Program.recordType-meta.xml
<RecordType>
    <fullName>PASE_Program</fullName>
    <active>true</active>
    <label>PASE Program</label>
</RecordType>