unpackaged/main/default/objects/Training_Subscription_Term__c/recordTypes/X20_Group_Monthly.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_Monthly</fullName>
    <active>true</active>
    <label>20 Group - Monthly</label>
</RecordType>