unpackaged/main/default/objects/Training_Subscription_Term__c/listViews/Active_Training_Subscription_Terms.listView-meta.xml
<ListView>
    <fullName>Active_Training_Subscription_Terms</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Active - Training Subscription Terms</label>
</ListView>