unpackaged/main/default/objects/Training_Subscription_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Subscription_Term__c.Online_University</value>
    </filters>
    <label>All</label>
</ListView>